casas de bau. compra de carta e utilizacao unica do bau por player

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -66,3 +66,11 @@
         opacity: 0.3;
     }
 }
+
+.casa_bau {
+    background-color: purple;
+}
+
+.casa_fogo {
+    background-color: orange;
+}
